--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -9,6 +9,8 @@ body{
 nav{
     display: flex;
     justify-content:space-between ;
+    align-items: center;
+    margin: 0  200px;
 }
 .nav-title{
     color: var(--Dark-01, #181818);
@@ -41,4 +43,16 @@ nav a{
     font-size: 20px;
     font-weight: 700px;
     padding: 15px 35px;
+}
+/* header related styles */
+.header{
+  background-color:  #FFF8F3;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .profile-pic{
+    width: 500px;
 }
