added abaout information

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -76,7 +76,10 @@ nav a{
   margin-bottom: 20px;  
 }
 /*main section style */
-
+.main{
+    max-width: 140px;
+    margin: 0  auto;
+}
 
 
 
@@ -90,16 +93,20 @@ nav a{
 .section-title{
     color:#181818 ;
 text-align: center;
-/* font-family: Open Sans; */
 font-size: 35px;
-/* font-style: normal; */
 font-weight: 700;
-/* line-height: normal; */
 }
 .section-description{
   color: #757575;
     text-align: center;
     font-size: 18px;  
+}
+.about-info-container{
+    display: flex;
+    justify-content:space-around;
+}
+.about-info{
+    text-align: center;
 }
 
     
