--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -104,10 +104,17 @@ font-weight: 700;
 .about-info-container{
     display: flex;
     justify-content:space-around;
+
 }
 .about-info{
     text-align: center;
 }
+#what-i-do-description{
+    padding: 30px 150px;
+
+}
+
+    
 
     
    
