--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -80,7 +80,9 @@ nav a{
     max-width: 140px;
     margin: 0  auto;
 }
-
+.main section{
+    margin-top: 130px;
+}
 
 
 /* about section style */
@@ -109,9 +111,24 @@ font-weight: 700;
 .about-info{
     text-align: center;
 }
+/* skills related styles */
 #what-i-do-description{
     padding: 30px 150px;
+}
+.skils-container{
+    display: flex;
+    gap:24px ; 
+}
+.skill{
+    padding: 30px; 
+    border-radius: 5px;
+background: #FFF;
 
+box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-description{
+ color: #757575;  
+    
 }
 
     
