--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -130,8 +130,39 @@ box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
  color: #757575;  
     
 }
+.resume-colum-title{
+    color: #474747;
+font-size: 30px;
+font-weight: 700;
+}
+.resume-container{
+    display: flex;
+    gap: 71px;
+}
+.resume-item-institute,.resume-item-description{
+    color: #757575;
+}
+.resume-item-title{
+    color: #474747;
+font-size: 25px;
+font-weight: 700;
+
+}
+.resume-container, hr{
+    margin: 30px;
+}
+.download-cv{
+text-align: center;
+margin-top: 50px;
+}
 
     
+
+
+    
+
+    
+
 
     
    
