--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -155,6 +155,13 @@ font-weight: 700;
 text-align: center;
 margin-top: 50px;
 }
+/* footer-style */
+footer{
+    display: flex;
+    background-color: #FFF8F3;
+    padding:130px 200px ;
+    margin: 100px;
+}
 
     
 
